Refactor AST: Sealed Interfaces, Visitor Pattern, Strict Types